docs: 펫 리스트 조회 API

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -20,3 +20,8 @@ include::api/user/email.adoc[]
 == Login API
 
 include::api/login/login.adoc[]
+
+[[Pet-API]]
+== Pet API
+
+include::api/pet/pet.adoc[]
