docs: 산책 등록 수정 API RestDcos

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -26,6 +26,8 @@ include::api/login/login.adoc[]
 
 include::api/pet/pet.adoc[]
 
+include::api/pet/alarm.adoc[]
+
 [[Storage-API]]
 == Storage API
 
