--- a/src/docs/asciidoc/api/pet/alarm.adoc
+++ b/src/docs/asciidoc/api/pet/alarm.adoc
@@ -61,3 +61,4 @@ include::{snippets}/pet-alarm-delete/path-parameters.adoc[]
 ==== HTTP Response
 
 include::{snippets}/pet-alarm-delete/http-response.adoc[]
+include::{snippets}/pet-alarm-delete/response-fields.adoc[]
