docs: 산책 등록 API

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -28,6 +28,11 @@ include::api/pet/pet.adoc[]
 
 include::api/pet/alarm.adoc[]
 
+[[Walk-API]]
+== Walk API
+
+include::api/pet/walk.adoc[]
+
 [[Storage-API]]
 == Storage API
 
