--- a/src/docs/asciidoc/api/pet/walk.adoc
+++ b/src/docs/asciidoc/api/pet/walk.adoc
@@ -1,3 +1,16 @@
+[[walk-list]]
+=== 산책 이력 목록 조회
+
+==== HTTP Request
+
+include::{snippets}/walk-list/http-request.adoc[]
+include::{snippets}/walk-list/query-parameters.adoc[]
+
+==== HTTP Response
+
+include::{snippets}/walk-list/http-response.adoc[]
+include::{snippets}/walk-list/response-fields.adoc[]
+
 [[walk-create]]
 === 산책 이력 저장
 
