docs: 용품 카테고리 저장, 조회 docs

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -38,6 +38,11 @@ include::api/pet/walk.adoc[]
 
 include::api/pet/pet-item.adoc[]
 
+[[UserItemCategory-API]]
+== UserItemCategory API
+
+include::api/pet/user-item-category.adoc[]
+
 [[Storage-API]]
 == Storage API
 
