feat: 강아지용품  (#6)
* feat: 강아지용품 Entity설계

* feat: 용품 버킷 환경변수 설정

* feat: 용품 저장, 조회 API

* docs: 용품 저장, 조회 API docs

* feat: 사용자 용품 카테고리 관리 Entity 설계

* feat: 용품 카테고리 응답 API

* feat: 사용자 용품 카테고리 저장, 조회 API

* docs: 용품 카테고리 조회 docs

* docs: 용품 카테고리 저장, 조회 docs

* feat: 카테고리 타입 추가

* docs: 카테고리 요청값 추가

* refactor: UserItemCategory User 폴더로 이동

* fix: 카테고리 삭제 Repository수정

문제: deleteByUserIdAndCategoryType은 JPA derived delete라서 내부적으로 엔티티를 SELECT한 후 각각 delete합니다. 이 때 Hibernate의 flush 순서 때문에 DELETE가 INSERT보다 나중에 실행돼서 unique constraint 위반이 발생합니다.

  해결: @Modifying + @Query로 직접 JPQL DELETE를 실행해서 즉시 DB에 반영합니다.

* fix: 환경변수 이름 수정

* fix: PET_ITEM_PHOTOf로 환경변수명 수정

* test: 테스트환경변수 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -33,6 +33,16 @@ include::api/pet/alarm.adoc[]
 
 include::api/pet/walk.adoc[]
 
+[[PetItem-API]]
+== PetItem API
+
+include::api/pet/pet-item.adoc[]
+
+[[UserItemCategory-API]]
+== UserItemCategory API
+
+include::api/pet/user-item-category.adoc[]
+
 [[Storage-API]]
 == Storage API
 
